--- a/src/container/pages/todolist/Todolist.css
+++ b/src/container/pages/todolist/Todolist.css
@@ -222,7 +222,7 @@ body[dir="rtl"] .todolist-heading-size {
 }
 
 button.btn.btn-primary.meeting.search.me-3.btn.btn-Primary svg {
-  margin-top: -1px;
+  margin-top: -3px;
 }
 
 body[dir="rtl"]
